<?xml version="1.0" encoding="utf-8"?>
<ScrollView 

    xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/forum_copyright"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="20dip"
	 >
	<LinearLayout 
	    
	    android:orientation="vertical"
		android:layout_height="fill_parent" 
		android:layout_width="fill_parent"
		>
		<TextView 
		   
			
			android:textSize="24.5sp"
			android:layout_marginTop="23dip"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:text="@string/main_title" 
			android:textColor="@color/title"
			android:textStyle="bold"
		/>
		<Button 
		    android:id="@+id/directions_button"
		    android:background="@drawable/buttonshape"
		    android:layout_marginTop="45dip"
		    android:layout_marginLeft="60dip" 
		    android:layout_marginRight="60dip"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:text="@string/directions_label"
			android:textSize="20sp"
			
			 />
		<Button 
		    android:id="@+id/eat_button" 
		    android:background="@drawable/buttonshape"
		    android:layout_marginTop="25dip"
		    android:layout_marginLeft="60dip" 
		    android:layout_marginRight="60dip" 
		    android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:text="@string/eat_label" 
			android:textSize="20sp"
			 />
		<Button 
		    android:id="@+id/sleep_button" 
		    android:background="@drawable/buttonshape"
		    android:layout_marginTop="25dip"
		    android:layout_marginLeft="60dip" 
		    android:layout_marginRight="60dip" 
		    android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:text="@string/sleep_label" 
			android:textSize="20sp"
			 />
		<Button 
		    android:id="@+id/otherinfo_button" 
		    android:background="@drawable/buttonshape"
		    android:layout_marginTop="25dip"
		    android:layout_marginLeft="60dip" 
		    android:layout_marginRight="60dip" 
		    android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:text="@string/otherinfo_label" 
			android:textSize="20sp"
			/>
	</LinearLayout>

</ScrollView>